# memory

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: api.rs  cache.rs  client.rs  consolidation.rs  embed_cohere.rs  embed_openai.rs  errors.rs  evolution.rs  experts.rs  graph.rs  lib.rs  llm.rs  main.rs  mcp.rs  metrics.rs  openai_compat.rs  rag.rs  reasoning.rs  resilience.rs  staleness.rs  store.rs  tiers.rs  tools.rs  types.rs  vector.rs
