[package]
name = "agentic-memory"
version = "1.0.0"
description = "Agentic Memory — Generic memory layer with SQLite storage, vector search (with binary quantization), RAG pipeline, and HTTP API. Zero dependencies on trading or any specific domain."
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.40", features = ["bundled"] }

# HTTP API
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "limit", "timeout"] }
tower_governor = "0.4"

# Vector search
sqlite-vec = "0.1.9"

# Async
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.3"
reqwest-retry = "0.6"

# Pin for compatibility with older Rust (1.75)
zeroize = "1.7"

# Observability (recommended for production)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = "0.16"

# URL encoding (for client SDK and MCP)
urlencoding = "2"

# ID generation (centralized, sortable)
uuid = { version = "1.10", features = ["v7", "serde"] }

[dev-dependencies]
tower = { version = "0.4", default-features = false, features = ["util"] }
